GUI: Use Deg/S for Angular speeds rather than Rad/S
git-svn-id: file:///dev/shm/opensim/Branches/OpenSim31@8283 fc29be9c-2cb0-420d-b520-73dbd18add6e

--- a/Gui/opensim/coordinateViewer/src/org/opensim/coordinateviewer/CoordinateSliderWithBox.form
+++ b/Gui/opensim/coordinateViewer/src/org/opensim/coordinateviewer/CoordinateSliderWithBox.form
@@ -217,7 +217,7 @@
     <Component class="javax.swing.JFormattedTextField" name="jSpeedTextField">
       <Properties>
         <Property name="text" type="java.lang.String" value="1.000"/>
-        <Property name="toolTipText" type="java.lang.String" value="Speed"/>
+        <Property name="toolTipText" type="java.lang.String" value="Speed M/S Deg/S"/>
         <Property name="alignmentY" type="float" value="0.0"/>
       </Properties>
       <Events>
